@@ -15,6 +15,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk, 6.1-dev, future 6.2): 
 -------------------------------------------------
 
+- automatically translate vector symbol points (#4116)
+
 - Add RFC79 Layer masking (#4111)
 
 - Fixed single pixel coverages in WCS 2.0 (#4110)
